# voidgun

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.devin/: wiki.json
.github/workflows/: telegram-notify.yml
circuits/: Nargo.toml
circuits-bin/transfer/: Nargo.toml  Prover.toml
circuits-bin/transfer/src/: main.nr
circuits-bin/transfer/vk_temp/: vk  vk_hash
circuits-bin/withdrawal/: Nargo.toml
circuits-bin/withdrawal/src/: main.nr
circuits/src/: keys.nr  lib.nr  merkle.nr  notes.nr  rlp.nr  rlp_test.nr  transfer.nr  tx.nr
contracts/: foundry.toml  package.json
contracts/cache/: solidity-files-cache.json  test-failures
contracts/script/: Deploy.s.sol  DeployPool.s.sol  DeployV2.s.sol
contracts/scripts/: Deploy.ts  DeployV2.ts  TestDeposit.ts  tenderly.ts
contracts/src/: IVerifier.sol  Poseidon2.sol  VoidgunPool.sol  VoidgunPoolV2.sol
contracts/test/: Poseidon2.t.sol  VoidgunPool.t.sol
contracts/verifier/: TransferVerifier.sol  WithdrawalVerifier.sol
contracts/verifier/compiled/: ZKTranscriptLib.abi
contracts/verifier/compiled_linked/: BaseZKHonkVerifier.abi
crates/contracts/: Cargo.toml
crates/contracts/src/: bindings.rs  lib.rs  pool.rs
crates/core/: Cargo.toml
crates/core/src/: encryption.rs  keys.rs  lib.rs  merkle.rs  notes.rs  nullifiers.rs  poseidon2.rs  tx.rs  utils.rs
crates/prover/: Cargo.toml  build.rs
crates/prover/src/: lib.rs
crates/prover/tests/: e2e_full_withdrawal_test.rs  e2e_tenderly_test.rs  e2e_withdrawal_test.rs  e2e_withdrawal_v2_test.rs  generate_verifiers.rs  integration_test.rs
crates/railgun-lane/: Cargo.toml
crates/railgun-lane/crates/railgun-lane/artifacts/: 02x01.wasm
crates/railgun-lane/src/: artifacts.rs  bip32.rs  contracts.rs  event_loader.rs  keys.rs  lane.rs  lib.rs  notes.rs  poseidon.rs  prover.rs  rpc.rs  tx.rs  ws.rs
crates/railgun-lane/tests/: integration.rs  onchain_verification.rs  proof_generation.rs  sepolia_integration.rs
crates/railgun-lane/tests/common/: mod.rs
crates/reth-plugin/: Cargo.toml  README.md
crates/reth-plugin/examples/: reth_integration.rs
crates/reth-plugin/src/: config.rs  engine.rs  exex.rs  lib.rs  rpc.rs  storage.rs
crates/voidgun-proxy/: Cargo.toml
crates/voidgun-proxy/src/: context.rs  db.rs  error.rs  jsonrpc.rs  lib.rs  main.rs  methods.rs  proxy.rs  server.rs
crates/voidgun-proxy/tests/: e2e_tenderly.rs  proxy_tests.rs
docs/: eddsa-circomlib.md  index.html  nullmask.tex  protocol-visualization.html
docs/app/: index.html
scripts/: build-bb.sh  deploy-tenderly.sh  download-railgun-artifacts.sh  dump-railgun-events.sh
