[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/prover",
    "crates/contracts",
    "crates/reth-plugin",
    "crates/railgun-lane",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/igor53627/voidgun"

[workspace.dependencies]
# Crypto
ark-ff = "0.5"
ark-bn254 = "0.5"
ark-ed-on-bn254 = "0.5"
ark-serialize = "0.5"
poseidon2 = { git = "https://github.com/HorizenLabs/poseidon2" }
light-poseidon = "0.4"

# Noir (ACVM only - no barretenberg feature to avoid C++ compilation)
# Note: Using bb CLI for proving/verifying to avoid bb_rs build issues

# Ethereum
alloy-primitives = { version = "1.0", features = ["rlp", "serde"] }
alloy-sol-types = "1.0"
alloy-rlp = "0.3"
alloy-consensus = "1.0"
k256 = { version = "0.13", features = ["ecdsa"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
eyre = "0.6"
anyhow = "1"

# Logging
tracing = "0.1"

# Storage
sled = "0.34"

# Utilities
once_cell = "1"
base64 = "0.22"
async-trait = "0.1"

# Internal crates
voidgun-core = { path = "crates/core" }
voidgun-prover = { path = "crates/prover" }
voidgun-contracts = { path = "crates/contracts" }
