[workspace]
resolver = "2"
members = [
    "crates/railgun-lane",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/igor53627/voidgun"

[workspace.dependencies]
# Crypto
ark-ff = "0.5"
ark-bn254 = "0.5"
ark-ed-on-bn254 = "0.5"
ark-serialize = "0.5"
light-poseidon = "0.4"

# Ethereum
alloy-primitives = { version = "1.0", features = ["rlp", "serde"] }
alloy-sol-types = "1.0"
k256 = { version = "0.13", features = ["ecdsa"] }

# Async
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
# Logging
tracing = "0.1"

# Utilities
once_cell = "1"
async-trait = "0.1"


