[package]
name = "voidgun-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ark-ff.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
alloy-primitives.workspace = true
alloy-rlp = { workspace = true, features = ["derive"] }
serde.workspace = true
thiserror.workspace = true
rand = "0.8"
hex = "0.4.3"
once_cell = "1.19"
