[package]
name = "voidgun-reth-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
voidgun-core.workspace = true
voidgun-prover = { path = "../prover" }
voidgun-contracts = { path = "../contracts" }

# Async
tokio.workspace = true
futures.workspace = true

# Error handling
thiserror.workspace = true
eyre.workspace = true

# Logging
tracing.workspace = true

# Storage
sled.workspace = true
hex = "0.4"

# Ethereum
alloy-primitives.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true

# JSON-RPC (will need jsonrpsee when integrating with reth)
# jsonrpsee = { version = "0.24", features = ["server", "macros"] }

# reth dependencies (commented until we integrate)
# reth-ethereum = { git = "https://github.com/paradigmxyz/reth" }
