[package]
name = "voidgun-reth-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
voidgun-core.workspace = true
voidgun-prover.workspace = true
voidgun-contracts = { path = "../contracts" }

# Random generation
rand = "0.8"

# Async
tokio.workspace = true
futures.workspace = true

# Error handling
thiserror.workspace = true
eyre.workspace = true

# Logging
tracing.workspace = true

# Storage
sled.workspace = true
hex = "0.4.3"

# Ethereum
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true
k256.workspace = true

# JSON-RPC
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
async-trait = "0.1"

# Transaction decoding
alloy-consensus.workspace = true
alloy-rlp.workspace = true

# Serialization
serde.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

# reth dependencies (commented until we integrate with actual reth)
# reth-exex = { git = "https://github.com/paradigmxyz/reth" }
# reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
# reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
