[package]
name = "voidgun-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Privacy-via-proxy RPC server for Voidgun"

[[bin]]
name = "voidgun-proxy"
path = "src/main.rs"

[dependencies]
# Core library
railgun-lane = { path = "../railgun-lane" }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio.workspace = true

# Database (SQLite for persistence)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP client for upstream RPC
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

# Ethereum types
alloy-primitives.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow = "1"

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
async-trait.workspace = true
dashmap = "6"
hex = "0.4"
sha3 = "0.10"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
httpmock = "0.7"
tokio-tungstenite = "0.23"
hyper = "1"
futures-util = "0.3"
